eww/eww.scss
* {
  all: unset; // Unsets everything so you can style everything from scratch
  font-family: "JetBrainsMono Nerd Font";
  font-size: 14px;
  font-weight: normal;
}

// Global Styles
.bar {
  background-color: #3a3a3a;
  color: #b0b4bc;
  border-radius: 16px;
}

// Styles on classes (see eww.yuck for more information)

.music-box {
  all: unset;
  border-radius: 16px;
}

.music {
  background-repeat: no-repeat;
  background-position: 0% 30%;
  border-bottom-left-radius: 16px;
  border-top-left-radius: 16px;
  min-width: 640px;
}

.music-text {
  padding: 6px 12px;
  font-weight: bold;
  // text-shadow:
  //   -1px -1px 0 #555555,
  //   1px -1px 0 #555555,
  //   -1px 1px 0 #555555,
  //   1px 1px 0 #555555;
}

.metric scale trough highlight {
  all: unset;
  background-color: #d35d6e;
  color: #000000;
  border-radius: 10px;
}

.metric scale trough {
  all: unset;
  background-color: #4e4e4e;
  border-radius: 50px;
  min-height: 3px;
  min-width: 50px;
  margin-left: 10px;
  margin-right: 16px;
}

.label-ram {
  font-size: large;
}

